# loqui

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  widget.html
.doctor/: dupe-ignore  run.sh
docs/: IMPLEMENTATION.md  PRD.md  tech-tauri2.md
landing/: package-lock.json  package.json
src/: app.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  audio.rs  commands.rs  error.rs  hotkey.rs  lib.rs  llm.rs  main.rs  model_manager.rs  paste.rs  state.rs  storage.rs  stt.rs  window.rs
src-tauri/src/activeapp/: detector.rs
src-tauri/src/agent/: pipeline.rs  refactor.rs
src-tauri/src/audio/: capture.rs  devices.rs  dsp.rs  types.rs
src-tauri/src/commands/: audio.rs  config.rs  hotkey.rs  llm.rs  llm_keys.rs  model_helpers.rs  profiles.rs  stt.rs  stt_cloud.rs  transcripts.rs  widget.rs
src-tauri/src/hotkey/: cgevent_tap.rs  handler.rs
src-tauri/src/llm/: chunker.rs  engine.rs  llm_model_manifest.json  model_manager.rs  pricing.rs  remote.rs  types.rs
src-tauri/src/model_manager/: config.rs  download.rs  types.rs
src-tauri/src/paste/: injector.rs  macos.rs
src-tauri/src/security/: secrets.rs
src-tauri/src/storage/: config.rs  database.rs  profiles.rs  secrets.rs  transcripts.rs
src-tauri/src/stt/: dispatch.rs  model_manager.rs  model_manifest.json  remote.rs  types.rs  whisper.rs
src-tauri/src/window/: main_window.rs  tray.rs  widget.rs
(+172 files in other folders)
